--- a/dev/playbooks/chd-setup.yaml
+++ b/dev/playbooks/chd-setup.yaml
@@ -7,7 +7,7 @@
   remote_user: root
   tasks:
   - name: Install Docker
-    yum: name=docker state=latest
+    package: name=docker state=latest
   - service: name=docker state=started enabled=yes
 
   - name: Install python pip
@@ -15,6 +15,8 @@
   - name: Install docker-py
     pip: name=docker-py state=latest
 
+  - name: Install git
+    package: name=git state=present
   - name: Clone content host repo
     git:
       repo : https://github.com/JacobCallahan/content-host-d.git
@@ -26,4 +28,3 @@
       path: /root/content-host-d
       name: ch-d
       tag: rhel74
-
